Fixed some display issues on mobile.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -161,6 +161,7 @@ section {
 	h2 {
 		text-align: center;
 		font-size: 24px;
+    line-height: 2em;
 		font-weight: 600;
 		margin-bottom: 48px;
 
@@ -237,6 +238,7 @@ section {
 .ribbon {
 	background: $red;
   color: #fff;
+  line-height: 1.3em;
 	padding: 32px;
 }
 
